style.css
/*  Global */
html {
  overflow: hidden;
  height: 100%;
}

body {
  background: #000;
  margin: 0;
  overflow-x: hidden;
}

/* Horizontal scroller content */
.horizontal-scroller {
  height: 100vh;
  width: 100%;
  display: flex;
  align-items: center;
  transition: all 0.3 ease-in-out;
}

.horizontal-scroller__list {
  height: auto;
  padding: 0px;
  width: 100%;
  white-space: nowrap;
  list-style: none;
}

.horizontal-scroller__item-container {
  display: inline-block;
  position: relative;
  vertical-align: top;
  white-space: normal;
  overflow: hidden;
  width: 36.54843%;
  height: 500px;
  margin-right: -4px;
}

.horizontal-scroller__item {
  background: url("img/placeholder.jpg");
  transition: all .7s ease-in-out;
  background-size: cover;
  margin-right: -4px;
  height: 500px;
}

.horizontal-scroller__item:hover {
  cursor: pointer;
  transform: scale(1.03);
}

/* Horizontal scroller navigation */
.horizontal-scroller__nav {
  --nav-color: rgba(72, 72, 72, 0.494);
  height: 5px;
  position: absolute;
  bottom: 20px;
  border-left: 1px solid var(--nav-color);
  border-right: 1px solid var(--nav-color);
  overflow: hidden;
  margin-left: 32.5%; 
  width: 35%;
  z-index: 0;
}

.horizontal-scroller__nav::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 1px;
  background: var(--nav-color);
  top: 2px;
  left: 0;
}

.horizontal-scroller__indicator { 
  height: 5px;
  background: rgb(31, 30, 30);
  position: absolute;
  width: 5%;
  margin-bottom: 4px;
  z-index: 1;
}


@media(max-width: 800px) {
  .horizontal-scroller__item-container {
    width: 100%;
  }

  .horizontal-scroller__list {
    display: flex;
    flex-direction: column;
  }

  .horizontal-scroller__nav {
    display: none;
  }
}

